[package]
name = "strange_pills"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", features=["serialize"]}
rand = "0.8.5"
bimap = "*"
serde = { version = "1", features = ["derive"]} 